--- a/package.json
+++ b/package.json
@@ -9,12 +9,22 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@fontsource/space-grotesk": "^5.2.10",
+    "@mui/system": "^7.3.5",
+    "@reverse-ui/react": "1.0.39-alpha.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
+    "howler": "^2.2.4",
+    "lucide-react": "^0.555.0",
     "next": "16.0.6",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "sonner": "^2.0.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/howler": "^2.2.12",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
